--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "d3": "~3.4.11",
     "topojson": "~1.6.15",
     "datamaps": "~0.3.3",
-    "smooth-scroll": "https://github.com/cferdinandi/smooth-scroll.git"
+    "smooth-scroll": "https://github.com/cferdinandi/smooth-scroll.git",
+    "ngDialog": "~0.2.6"
   }
 }
