--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "datamaps": "~0.3.3",
     "smooth-scroll": "https://github.com/cferdinandi/smooth-scroll.git",
     "ngDialog": "~0.2.6",
-    "angular-scroll": "~0.6.1"
+    "angular-scroll": "~0.6.1",
+    "nvd3": "~1.1.15-beta"
   }
 }
