--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
     "datamaps": "~0.3.3",
     "ngDialog": "~0.2.6",
     "angular-scroll": "~0.6.1",
-    "nvd3": "~1.1.15-beta"
+    "nvd3": "~1.1.15-beta",
+    "moment": "~2.8.2",
+    "underscore": "~1.6.0"
   }
 }
